--- a/QuizzGame/QuizzGame/Storyboards/Base.lproj/Main.storyboard
+++ b/QuizzGame/QuizzGame/Storyboards/Base.lproj/Main.storyboard
@@ -299,6 +299,7 @@
                         <outlet property="nickname" destination="yzn-73-g8w" id="GZf-ED-hBl"/>
                         <outlet property="progressiveView" destination="gxw-tm-2Gv" id="n8i-n2-J3z"/>
                         <outlet property="questionLabel" destination="14s-Ui-CqX" id="JXi-9y-SjC"/>
+                        <outlet property="questionNumberLabel" destination="Kfh-Ua-Yhe" id="Gxz-H6-jia"/>
                         <outlet property="questionView" destination="GkZ-HX-6Qk" id="q0m-eL-uIM"/>
                         <outlet property="scoreLabel" destination="pLG-a2-6ad" id="UEK-EA-4NY"/>
                         <outletCollection property="questionButtons" destination="JAf-ep-nJX" collectionClass="NSMutableArray" id="IRD-Lt-8u1"/>
@@ -351,7 +352,7 @@
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oEg-qG-mdb">
                                             <rect key="frame" x="20" y="0.0" width="353" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
+                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
