--- a/QuizzGame/QuizzGame/Storyboards/Base.lproj/Main.storyboard
+++ b/QuizzGame/QuizzGame/Storyboards/Base.lproj/Main.storyboard
@@ -18,21 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total correct answers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crz-o4-AoN">
-                                <rect key="frame" x="35" y="113" width="155.66666666666666" height="19.333333333333343"/>
+                                <rect key="frame" x="35" y="143" width="155.66666666666666" height="19.333333333333343"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x out of 4 Questions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7E5-97-8FF">
-                                <rect key="frame" x="35" y="142.33333333333334" width="168.33333333333334" height="21"/>
+                                <rect key="frame" x="35" y="172.33333333333334" width="168.33333333333334" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                 <color key="textColor" systemColor="systemGreenColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your final score is" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTF-13-X8X">
-                                <rect key="frame" x="82" y="313.33333333333331" width="229" height="34"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
-                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XhD-EW-NId">
@@ -41,24 +35,74 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time spent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5I-Ww-Cdr">
+                                <rect key="frame" x="158.33333333333334" y="491" width="76.666666666666657" height="19.333333333333314"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tnY-sH-F7q">
+                                <rect key="frame" x="178.66666666666666" y="515.33333333333337" width="36" height="22"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" systemColor="systemGray2Color"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nickname" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i6G-bp-XgE">
+                                <rect key="frame" x="152.66666666666666" y="711" width="88" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <color key="textColor" systemColor="systemGreenColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k0g-s2-VOS">
+                                <rect key="frame" x="121.66666666666669" y="755" width="150" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="ZET-AW-gA5"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="systemGreenColor"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Return">
+                                    <fontDescription key="titleFontDescription" type="system" weight="heavy" pointSize="20"/>
+                                    <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="returnHome:" destination="ckG-YS-ndD" eventType="touchUpInside" id="0en-em-0bw"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your final score is" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTF-13-X8X">
+                                <rect key="frame" x="82" y="327" width="229" height="34"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="b6n-80-egs"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="mTF-13-X8X" firstAttribute="top" secondItem="7E5-97-8FF" secondAttribute="bottom" constant="150" id="2V8-Ps-8tT"/>
+                            <constraint firstItem="k0g-s2-VOS" firstAttribute="centerX" secondItem="NHg-Hn-Dxj" secondAttribute="centerX" id="0tu-c4-YH0"/>
+                            <constraint firstItem="k0g-s2-VOS" firstAttribute="top" secondItem="i6G-bp-XgE" secondAttribute="bottom" constant="20" id="ADa-tb-f3n"/>
+                            <constraint firstItem="i6G-bp-XgE" firstAttribute="centerX" secondItem="NHg-Hn-Dxj" secondAttribute="centerX" id="Csv-xa-cWN"/>
+                            <constraint firstItem="tnY-sH-F7q" firstAttribute="centerX" secondItem="NHg-Hn-Dxj" secondAttribute="centerX" id="FSK-3G-0WH"/>
+                            <constraint firstItem="A5I-Ww-Cdr" firstAttribute="centerX" secondItem="NHg-Hn-Dxj" secondAttribute="centerX" id="OOx-V2-0Bo"/>
+                            <constraint firstItem="tnY-sH-F7q" firstAttribute="top" secondItem="A5I-Ww-Cdr" secondAttribute="bottom" constant="5" id="Xal-kE-XWM"/>
+                            <constraint firstItem="A5I-Ww-Cdr" firstAttribute="top" secondItem="XhD-EW-NId" secondAttribute="bottom" constant="10" id="aRW-Ml-adJ"/>
                             <constraint firstItem="7E5-97-8FF" firstAttribute="leading" secondItem="b6n-80-egs" secondAttribute="leading" constant="35" id="bIY-Il-ViH"/>
+                            <constraint firstItem="b6n-80-egs" firstAttribute="bottom" secondItem="k0g-s2-VOS" secondAttribute="bottom" constant="25" id="fr3-qa-pnj"/>
                             <constraint firstItem="XhD-EW-NId" firstAttribute="centerY" secondItem="NHg-Hn-Dxj" secondAttribute="centerY" id="gSh-Hk-goW"/>
                             <constraint firstItem="mTF-13-X8X" firstAttribute="centerX" secondItem="NHg-Hn-Dxj" secondAttribute="centerX" id="gT1-jJ-seN"/>
                             <constraint firstItem="crz-o4-AoN" firstAttribute="leading" secondItem="b6n-80-egs" secondAttribute="leading" constant="35" id="oRZ-RP-pKl"/>
-                            <constraint firstItem="crz-o4-AoN" firstAttribute="top" secondItem="b6n-80-egs" secondAttribute="top" constant="10" id="tAI-2X-n4h"/>
+                            <constraint firstItem="crz-o4-AoN" firstAttribute="top" secondItem="b6n-80-egs" secondAttribute="top" constant="40" id="tAI-2X-n4h"/>
                             <constraint firstItem="7E5-97-8FF" firstAttribute="top" secondItem="crz-o4-AoN" secondAttribute="bottom" constant="10" id="u09-CG-HRp"/>
+                            <constraint firstItem="XhD-EW-NId" firstAttribute="top" secondItem="mTF-13-X8X" secondAttribute="bottom" constant="10" id="wKE-uG-haA"/>
                             <constraint firstItem="XhD-EW-NId" firstAttribute="centerX" secondItem="NHg-Hn-Dxj" secondAttribute="centerX" id="wkm-sV-RwH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" style="editor" id="Sp0-iS-yec"/>
                     <connections>
+                        <outlet property="dateLabel" destination="tnY-sH-F7q" id="dff-MZ-xBH"/>
                         <outlet property="finalScoreLabel" destination="XhD-EW-NId" id="bfj-Va-dgr"/>
+                        <outlet property="nicknameLabel" destination="i6G-bp-XgE" id="zfo-Yw-a3I"/>
                         <outlet property="resultLineLabel" destination="7E5-97-8FF" id="Mzm-dv-jO2"/>
+                        <outlet property="timeSpentLabel" destination="A5I-Ww-Cdr" id="Lo9-JF-3z1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPH-Pg-kLd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -68,7 +112,7 @@
         <!--Enter Quiz View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="EnterQuizViewController" customModule="QuizzGame" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EnterQuizViewController" id="BYZ-38-t0r" customClass="EnterQuizViewController" customModule="QuizzGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -308,10 +352,10 @@
             </objects>
             <point key="canvasLocation" x="2817.5572519083967" y="-35.211267605633807"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tab Bar View Controller-->
         <scene sceneID="qDf-Xa-YCV">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="sA8-u5-UIB" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="sA8-u5-UIB" customClass="UITabBarViewController" customModule="QuizzGame" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7Yf-xr-8rd">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
